KCM: Do not only show the folder name in the exclude folders

We now show the full path relative to the $HOME folder or the mount
point.

REVIEW: 117420
BUG: 33315